syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.store.bff.proto";
option java_outer_classname = "BffProto";

package bff_package;

service OrderBffService {
  rpc findAvailableProducts(findAvailableProductsRequest) returns (ProductListResponse);
  rpc createOrder(NewOrder) returns (OrderId);
  rpc createProduct(NewProduct) returns (ProductId);
}

enum ProductType {
  NULL_PROD_TYPE = 0;
  BOOK = 1;
  FOOD = 2;
  GADGET = 3;
  OTHER = 4;
}

message findAvailableProductsRequest {
  ProductType type = 1;
  int32  pageSize = 2;
}

message Product {
  int32 id = 1;
  string name = 2;
  ProductType type = 3;
  int32 inventory = 4;
}

message ProductListResponse {
  repeated Product products = 1;
}

message NewOrder {
  int32 productid = 1;
  int32 count = 2;
}

message OrderId {
  int32 id = 1;
}

message NewProduct {
  string name = 1;
  ProductType type = 2;
  int32 inventory = 3;
}

message ProductId {
  int32 id = 1;
}